# sandbox

./: .gitignore  README.md  ideas.md  pyproject.toml
dataviz/: README.md  index.html  main.js  package-lock.json  package.json  pyproject.toml  styles.css
dataviz/scripts/: download-dataset.sh  embed_data.py  reduce_dimensions.py
llmcrawl/: README.md  parse.py
llmcrawl/results/github_com_catcathh_UltraPixel/: cleaned_html.html  images.json  links.json  page.md
scripts/: backprop.py  jacobian.py
