[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Sandbox package"
authors = ["morgan <oss@morgandally.com>"]
# packages = [
#     { include = "cv", from = "src" },
# ]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.1.0"
pandas = "^2.2.1"
urllib3 = "^2.2.1"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
ipython = "^8.22.2"
nbconvert = "^7.16.2"
autograd = "^1.7.0"
torch = "^2.4.1"
fire = "^0.6.0"
plotext = "^5.2.8"
sentence-transformers = "^3.0.1"
kaggle = "^1.6.17"
llvmlite = "^0.43.0"


[tool.poetry.group.dev.dependencies]
black = "24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
